trunk/Archive/5e721fb6d81e969a28a4630e4c9925ae-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:44:1: error: stray ‘\’ in program
 --- c:\users\tbohne\dropbox\code\test\test\main.cpp ----------------------------
 ^
main.cpp:44:1: error: stray ‘\’ in program
main.cpp:44:1: error: stray ‘\’ in program
main.cpp:44:1: error: stray ‘\’ in program
main.cpp:44:1: error: stray ‘\’ in program
main.cpp:44:1: error: stray ‘\’ in program
main.cpp:44:1: error: stray ‘\’ in program
main.cpp:56:34: error: exponent has no digits
 011F1034  je          strHash<0>+1Eh (011F104Eh)  
                                  ^
main.cpp:67:1: error: stray ‘\’ in program
 --- c:\users\tbohne\dropbox\code\test\test\main.cpp ----------------------------
 ^
main.cpp:67:1: error: stray ‘\’ in program
main.cpp:67:1: error: stray ‘\’ in program
main.cpp:67:1: error: stray ‘\’ in program
main.cpp:67:1: error: stray ‘\’ in program
main.cpp:67:1: error: stray ‘\’ in program
main.cpp:67:1: error: stray ‘\’ in program
main.cpp: In function ‘int main(int, const char**)’:
main.cpp:20:5: error: redefinition of ‘int main(int, const char**)’
 int main(int argc, const char** argv) {
     ^
main.cpp:15:5: error: ‘int main(int, const char**)’ previously defined here
 int main(int argc, const char** argv) {
     ^
main.cpp:21:1: error: unable to find numeric literal operator ‘operator"" F1002’
 011F1002  in          al,dx  
 ^
main.cpp:21:11: error: expected ‘;’ before ‘in’
 011F1002  in          al,dx  
           ^
main.cpp:23:1: error: unable to find numeric literal operator ‘operator"" F1003’
 011F1003  mov         eax,dword ptr [argv]  
 ^
main.cpp:23:11: error: expected ‘;’ before ‘mov’
 011F1003  mov         eax,dword ptr [argv]  
           ^
main.cpp: At global scope:
main.cpp:35:1: error: expected unqualified-id before numeric constant
 011F101F  pop         ebp  
 ^
main.cpp:37:1: error: expected unqualified-id before numeric constant
 011F1020  jmp         strHash<0> (011F1030h)  
 ^
main.cpp:39:1: error: expected declaration before ‘}’ token
 }
 ^
